--- a/config.yaml
+++ b/config.yaml
@@ -1,46 +1,111 @@
-# Simple Agent System Configuration
-system:
-  name: "Simple Agent System"
-  version: "1.0.0"
-  host: "127.0.0.1"
+server:
   port: 8080
-
-# Default agents to create on startup
-agents:
-  - name: "Assistant"
-    capabilities: ["chat", "analysis"]
-    auto_start: true
-  
-  - name: "Analyzer" 
-    capabilities: ["analysis", "data_processing"]
-    auto_start: true
-
-# Available functions
-functions:
-  chat:
-    description: "Basic chat functionality"
-    parameters:
-      - name: "message"
-        type: "string"
-        required: true
-        description: "Message to send to the agent"
-  
-  analyze:
-    description: "Text analysis functionality"
-    parameters:
-      - name: "text"
-        type: "string"
-        required: true
-        description: "Text to analyze"
-  
-  echo:
-    description: "Echo function for testing"
-    parameters:
-      - name: "data"
-        type: "any"
-        required: false
-        description: "Data to echo back"
-  
-  status:
-    description: "Agent status information"
-    parameters: []
+  host: 0.0.0.0
+  idle_timeout: 300
+  allow_public_access: false
+  allow_internet_access: false
+logging:
+  level: INFO
+  file: ""
+  access_log: false
+  quiet_mode: false
+  show_request_details: true
+auth:
+  enabled: false
+  require_api_key: false
+  api_key_header: X-API-Key
+  api_keys:
+    []
+  rate_limit:
+    enabled: true
+    max_requests: 100
+    window_size: 60
+  cors:
+    enabled: true
+    allow_credentials: false
+    max_age: 86400
+    allowed_origins:
+      - "*"
+    allowed_methods:
+      - GET
+      - POST
+      - PUT
+      - DELETE
+      - OPTIONS
+      - HEAD
+      - PATCH
+    allowed_headers:
+      - Content-Type
+      - Authorization
+      - X-Requested-With
+      - Accept
+      - Origin
+search:
+  enabled: true
+  searxng_url: https://searx.stream/
+  timeout: 30
+  max_results: 20
+  default_engine: ""
+  api_key: ""
+  enable_safe_search: true
+  default_format: json
+  default_language: en
+  default_category: general
+database:
+  vector_database: faiss
+  retrieval_embedding_model: qwen3-embedding-0.6b
+  faiss:
+    index_type: Flat
+    index_path: .\data\faiss_index
+    dimensions: 1536
+    normalize_vectors: true
+    nlist: 100
+    nprobe: 10
+    use_gpu: false
+    gpu_device: 0
+    metric_type: IP
+models:
+  - id: gemma3-1b
+    path: https://huggingface.co/kolosal/gemma-3-1b/resolve/main/google_gemma-3-1b-it_q4_k_m.gguf
+    type: llm
+    load_immediately: true
+    main_gpu_id: 0
+    inference_engine: llama-cpu
+    load_params:
+      n_ctx: 2048
+      n_keep: 1024
+      use_mmap: true
+      use_mlock: false
+      n_parallel: 1
+      cont_batching: true
+      warmup: false
+      n_gpu_layers: 100
+      n_batch: 2048
+      n_ubatch: 512
+  - id: qwen3-embedding-0.6b
+    path: https://huggingface.co/kolosal/qwen3-embedding-0.6b/resolve/main/Qwen3-Embedding-0.6B-Q8_0.gguf
+    type: embedding
+    load_immediately: true
+    main_gpu_id: 0
+    inference_engine: llama-cpu
+    load_params:
+      n_ctx: 512
+      n_keep: 0
+      use_mmap: true
+      use_mlock: false
+      n_parallel: 2
+      cont_batching: true
+      warmup: false
+      n_gpu_layers: 100
+      n_batch: 256
+      n_ubatch: 64
+inference_engines:
+  - name: llama-cpu
+    library_path: ./build/Release/llama-cpu.dll
+    version: 1.0.0
+    description: CPU-based inference engine for LLaMA models
+    load_on_startup: true
+default_inference_engine: llama-cpu
+features:
+  health_check: true
+  metrics: true
