feat: Add comprehensive workflow orchestration system
- Add WorkflowManager and WorkflowOrchestrator classes for multi-agent workflows
- Implement workflow execution with sequential, parallel, and conditional logic
- Add REST API endpoints for workflow management and orchestration
- Integrate workflow system with HTTP server and main application
- Add workflow configuration loading from YAML files
- Implement request queuing, status tracking, and execution control
- Add workflow templates for research, analysis, and decision-making
- Update agent manager with name/ID lookup methods
- Enhance model interface error handling and response parsing
- Add comprehensive test suite for workflow components
- Update documentation with workflow examples and API endpoints
- Fix agent creation validation and configuration handling

Breaking changes:
- HTTPServer constructor now requires WorkflowManager and WorkflowOrchestrator
- Agent constructor now validates non-empty names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,11 @@ set(API_SOURCES
     src/api/http_server.cpp
 )
 
+set(WORKFLOW_SOURCES
+    src/workflows/workflow_manager.cpp
+    src/workflows/workflow_types.cpp
+)
+
 set(TOOL_SOURCES
     # Add tool sources here when available
 )
@@ -168,6 +173,7 @@ file(GLOB_RECURSE HEADERS "include/*.h" "include/*.hpp")
 set(ALL_SOURCES
     ${CORE_SOURCES}
     ${API_SOURCES}
+    ${WORKFLOW_SOURCES}
     ${TOOL_SOURCES}
 )
 
